--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "expres": "^0.0.5",
+    "express": "^4.19.2",
+    "netlify-lambda": "^2.0.16"
   }
 }
