--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "expres": "^0.0.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "netlify-lambda": "^2.0.16"
   }
 }
